--- a/index.qmd
+++ b/index.qmd
@@ -4,7 +4,7 @@ title: "git_web"
 
 This is a Quarto website.
 
-To learn more about Quarto websites visit <https://quarto.org/docs/websites>.
+To learn more about Quarto websites visit.
 
 ```{r}
 1 + 12/4
