--- a/about.qmd
+++ b/about.qmd
@@ -1,8 +1,25 @@
 ---
 title: "about"
+format:
+  html:
+    code-fold: show
+    code-summary: "Hide code"
+    code-overflow: wrap
+    toc-title: Page Contents
+    toc: true
+    toc-depth: 2
+    number-sections: false
+    html-math-method: katex
+    css: styles.css
+    theme: flatly
+    toc-location: left
+    smooth-scroll: true
+editor_options: 
+  chunk_output_type: console
 ---
 
-# About 
+# About
+
 About this site
 
 ```{r}
