--- a/section1.qmd
+++ b/section1.qmd
@@ -1,5 +1,19 @@
 ---
 title: "section 1"
+format:
+  html:
+    code-fold: show
+    code-summary: "Hide code"
+    code-overflow: wrap
+    toc-title: Page Contents
+    toc: true
+    toc-depth: 2
+    number-sections: false
+    html-math-method: katex
+    css: styles.css
+    theme: flatly
+    toc-location: left
+    smooth-scroll: true
 editor_options: 
   chunk_output_type: console
 ---
