--- a/section2.qmd
+++ b/section2.qmd
@@ -1,9 +1,25 @@
 ---
 title: "section 2"
+format:
+  html:
+    code-fold: show
+    code-summary: "Hide code"
+    code-overflow: wrap
+    toc-title: Page Contents
+    toc: true
+    toc-depth: 2
+    number-sections: false
+    html-math-method: katex
+    css: styles.css
+    theme: flatly
+    toc-location: left
+    smooth-scroll: true
 editor_options: 
   chunk_output_type: console
 ---
 
+# Chunk 1
+Test text
 ```{r}
 MyFrame = as.data.frame(
                   cbind(H = seq(0,1000,1),
@@ -15,4 +31,22 @@ library(ggplot2)
 
 ggplot(MyFrame, aes(H,V)) +
   geom_point(col="red")
+```
+
+# Chunk 2 
+
+Overview
+
+## Code
+```{r}
+2+3
+```
+
+# Chunk 3 
+
+Explantion
+
+## More Code
+```{r}
+2+3+3/2
 ```
