--- a/projects/attempt1/index.qmd
+++ b/projects/attempt1/index.qmd
@@ -3,6 +3,22 @@ title: "Attempt to create a Project Page"
 date: "2023-03-19"
 categories: [R, statistical inference]
 description: "Just a webpage test"
+format:
+  html:
+    code-fold: show
+    code-summary: "Hide code"
+    code-overflow: wrap
+    toc-title: Page Contents
+    toc: true
+    toc-depth: 2
+    number-sections: false
+    html-math-method: katex
+    css: styles.css
+    theme: flatly
+    toc-location: left
+    smooth-scroll: true
+editor_options: 
+  chunk_output_type: console
 ---
 
 ![](feature.jpg){fig-alt="random picture of a lubber"}
