--- a/snippits/snippit1/index.qmd
+++ b/snippits/snippit1/index.qmd
@@ -44,3 +44,12 @@ Here's my explanation of the next step.
 pi*7
 ```
 
+# Step three
+
+Here's my explanation of the third step.
+
+## Code chunk again
+```{r}
+pi*7/9
+```
+
