--- a/pindex.qmd
+++ b/pindex.qmd
@@ -24,4 +24,5 @@ date-modified: ""
 ---
 
 # [Projects]{.third-color}
-Projects here are more developed and complete than those found in [Snippits](/sindex).
+
+### Projects here are more developed and complete than those found in [Snippits](/sindex).
